# winch

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  rust.yml  windows-msi.yml
src/: cli.rs  main.rs  winchdownloader.rs
src/commands/: install.rs  mod.rs  remove.rs  search.rs  sync.rs  upgrade.rs
src/downloader/: mod.rs
src/remover/: mod.rs
temp/cli/: Cargo.toml
tests/: install.rs
