[package]
name = "winch_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
clickrs = "0.1.5"
json = "0.12.4"
pyo3 = "0.21.2"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde_json = "1.0.117"
structopt = "0.3.26"
zip-extract = "0.1.3"
