[package]
name = "winch"
version = "0.1.0"
edition = "2021"
authors = ["Brody Critchlow", "Tyler Critchlow"]
license = "MIT"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
json = "0.12.4"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde_json = "1.0.117"
term-kit = "0.3.0-prerelease2"
# term-kit = { git = "https://github.com/tylercritchlow/termkit.git", branch = "dev-3.0" }
zip-extract = "0.1.3"
